add_subdirectory(gpu-info)
add_subdirectory(card-runner)
add_subdirectory(ydraw-generator)
add_subdirectory(ydraw-maze)
add_subdirectory(ydraw-zoo)
add_subdirectory(ymux)
add_subdirectory(yflame)

# PDF and HTML tools (desktop only - require pdfio, litehtml)
if(NOT YETTY_ANDROID AND NOT EMSCRIPTEN)
    add_subdirectory(pdf2ydraw)
    add_subdirectory(html2ydraw)
    add_subdirectory(yhtml-machine)
    add_subdirectory(ybrowser)
endif()
